--- a/assembler/README
+++ b/assembler/README
@@ -26,7 +26,7 @@
 	info:
 		- macro's name and parameters pattern is [a-zA-Z_][0-9a-zA-Z_]*
 		- max number of parameters is fixed to 10
-		- use of macro with parameters in the operands is forbidden
+		- use of macro with parameters in the operands is forbidden (instructions and keywords)
 		- recursive include protection is automatic
 
 
@@ -41,15 +41,15 @@
 
 	1) memory lock
 		lock a memory region with the .memlock directive
-		.memlock	memory_region_name, start_addr, end_addr
+		.memlock	memory_region_name, start_addr, length
 
 	2) declare a variable
-		.var[size]	var_name, memory_region_name
+		.var	var_name, size, memory_region_name
 	
 	3) example
-		.memlock	mem, 0xc000, 0xc010
-		.var2		var, mem
-		.var6		string, mem
+		.memlock	mem, 0xc000, 8
+		.var		var, 2, mem
+		.var		string, 6, mem
 
 	
 ====================================================================================
@@ -62,12 +62,41 @@
 ====================================================================================
 *)	BANK SWITCH
 
-	use bank keyword to select a memory address for the begin of your followed code
-	.bank	bank_number, offset
+	use bank keyword to select a memory address to write your code
+	.bank	bank_number, offset?
 
 	info:
 		offset can't be greater than 0x4000
 		bank_number * 0x4000 + offset must be lower than (bank_number + 1) * 0x4000
+
+
+====================================================================================
+*)	WRITE BYTES
+
+	use byte keyword to write bytes in your code
+	.byte	byte,? next_byte,? ...
+
+	info:
+		multi-line syntax is allowed
+		example:
+			.byte	0x33 0x44 0x55\
+					0x66 0x77 0x88
+
+
+====================================================================================
+*)	WRITE ASCII STRING
+
+	use ascii keyword to write ascii strings in your code
+	.ascii	\"string\"
+
+	info:
+		string must be nul-terminated (\0)
+		multi-line syntax is not allowed
+		example:
+			.ascii	"1 + 2 = 3\0"
+		or
+			.ascii	"1 + 2 = 3"
+			.byte	0
 
 
 ====================================================================================
